force-app/main/default/objects/Housekeeper_Schedule__c/Housekeeper_Schedule__c.object-meta.xml
<CustomObject>
    <label>Housekeeper Schedule</label>
    <nameField>
        <displayFormat>HS-{0000}</displayFormat>
        <label>Housekeeper Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Housekeeper Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>