force-app/main/default/objects/Housekeeper_Schedule__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee__c.Role__c</field>
            <operation>equals</operation>
            <value>Housekeeper</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Housekeeper Schedules</relationshipLabel>
    <relationshipName>Housekeeper_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>