force-app/main/default/objects/Housekeeper_Schedule__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Housekeeper Schedules</relationshipLabel>
    <relationshipName>Housekeeper_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>