force-app/main/default/objects/Housekeeper_Schedule__c/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <label>Rooms to Clean</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>